<resources>
    <string name="app_name">NewUIDashBoardAdmin</string>
    <string name="app_name_1">IWBle</string>
    <string name="view_title">BLE-APP</string>
    <string name="unknown_device">Unknown device</string>
    <string name="menu_scan">Scanning</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_device_info">DeviceInfoActivity</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="label_device_name">Device name:</string>
    <string name="dailyCal">Daily Calories Allowance</string>
    <string name="completeDiary">Mark as Completed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_txt_recipe">You can unlock any %1$s Recipes of your choice for FREE.</string>
    <string name="reminder_workout_time">Remind me to do\nthis workout at</string>
    <string name="workout_reminder">Set Reminder for This Workout</string>
    <string name="sameoption1">500+ Recipes</string>
    <string name="sameoption4">20+ Live Yoga Sessions</string>
    <string name="sameoption5">1000+ Healthy Dine Out Recommendations</string>
    <string name="sameoption7">Unlimited Meal Plans</string>
    <string name="sameoption8">Ads Free</string>
    <string name="sameoption9">50+ Workout Plans</string>
    <string name="winner_of_month">Heartiest congratulation to %1$s for being the performer of the month %2$s.We are delighted to have you as a part of our MevoFit family.</string>
    <string name="food_tips">Food Tips</string>
    <string name="workout_tips">Workout Tips</string>
    <string name="menu_device_type_bracelet">Bracelet</string>
    <string name="menu_device_type_watch">Watch</string>
    <string name="menu_device_type_color_screen"></string>
    <string name="menu_suggest">Feedback</string>
    <string name="menu_about_us">Abount</string>
    <string name="menu_ble_device_list">Function list</string>
    <string name="logfood">Do you want to log this food?</string>
    <string name="water_congrats_dialog">Good job! Your body is well hydrated now. Keep up the good work.</string>
    <string name="pls_select_sdk_type">Please click the left menu to select the type of the link.</string>
    <string name="pls_unbind_bracelet">Please click the left menu to unbind the bracelet</string>
    <string name="pull_to_refresh">Pull to Refresh</string>
    <string name="pull_to_refresh_scan">Scanning...</string>
    <string name="pull_to_refresh_load">Loading...</string>
    <string name="pull_to_refresh_push">Release refresh</string>
    <string name="pull_to_refresh_success">refresh success</string>
    <string name="pull_to_refresh_fail">refresh fail</string>
    <string name="pull_to_refresh_time">last update M-d HH:mm</string>
    <string name="title_device_list">Device</string>
    <string name="title_device_setting">Bracelet Setting</string>
    <string name="title_device_data">Sport Data</string>
    <string name="index_device_name">Device Name:%s</string>
    <string name="index_device_mac">Device Address:%s</string>
    <string name="index_device_status_connect">Connect</string>
    <string name="index_device_status_disconnect">Disconnect</string>
    <string name="index_device_status">Connect Statue:%s</string>
    <string name="index_device_battery">Battery:%s</string>
    <string name="index_sport_step">Steps:%s</string>
    <string name="index_sport_count">Count:%s</string>
    <string name="index_sport_distance">Distance:%.1f m</string>
    <string name="index_sport_calorie">Calorie:%.1f KCal</string>
    <string name="index_device_unbind">Unbind</string>
    <string name="index_device_connect">Connect</string>
    <string name="index_device_disconnect">Disconnect</string>
    <string name="index_device_notification">Notification</string>
    <string name="index_device_ble_log">BLE log</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scan_connect_device">Connecting:%s</string>
    <string name="setting_shake">Vibration remind</string>
    <string name="setting_time">Time format</string>
    <string name="setting_date">Date format</string>
    <string name="setting_unit">Unit of measurement</string>
    <string name="setting_weather">Unit of Weather</string>
    <string name="setting_roll">Palming gestures</string>
    <string name="setting_roll_time">Palming gestures hours</string>
    <string name="setting_hand">Wearing Manner</string>
    <string name="setting_language">Language</string>
    <string name="setting_firmware_update">Firmware Upgrade</string>
    <string name="setting_dialog_confirm">Confirm</string>
    <string name="setting_dialog_cancel">Cancel</string>
    <string name="setting_dialog_time_24">24 hour</string>
    <string name="setting_dialog_time_12">12 hour</string>
    <string name="setting_dialog_date_1">Month/Day</string>
    <string name="setting_dialog_date_2">Day/Month</string>
    <string name="setting_dialog_unit_1">Metric</string>
    <string name="setting_dialog_unit_2">Imperial</string>
    <string name="setting_dialog_weather_1">Centigrade</string>
    <string name="setting_dialog_weather_2">Fahrenheit</string>
    <string name="setting_dialog_hand_1">Left</string>
    <string name="setting_dialog_hand_2">Right</string>
    <string name="setting_dialog_language_1">English</string>
    <string name="setting_dialog_language_2">Chinese</string>
    <string name="shake_1">Staccato</string>
    <string name="shake_2">Wave</string>
    <string name="shake_3">Heartbeat</string>
    <string name="shake_4">Radiation</string>
    <string name="shake_5">Lighthouse</string>
    <string name="shake_6">Symphony</string>
    <string name="shake_7">Fast</string>
    <string name="heart_title">HeartRate</string>
    <string name="heart_curr_value">HeartRate:%s</string>
    <string name="heart_detail_data_title">HeartRateDetail</string>
    <string name="sport_title">SportDetail</string>
    <string name="sport_plan_football">Soccer</string>
    <string name="sport_plan_basketball">Basketball</string>
    <string name="sport_plan_badminton">Badminton</string>
    <string name="sport_plan_pingpong">Table Tennis</string>
    <string name="sport_plan_bowling">Bowling</string>
    <string name="sport_plan_tennis">Tennis</string>
    <string name="sport_plan_volleyball">Volleyball</string>
    <string name="sport_plan_shuttlecock">Shuttlecock</string>
    <string name="sport_plan_swimming">Swimming</string>
    <string name="sport_plan_mountaineering">Mountain</string>
    <string name="sport_plan_walking">Walking</string>
    <string name="sport_plan_running">Running</string>
    <string name="sport_plan_cycling">Cycling</string>
    <string name="sport_plan_climbing">Climbing</string>
    <string name="sport_plan_skate">Skate</string>
    <string name="sport_plan_skee">Skee</string>
    <string name="sport_plan_dance">Dance</string>
    <string name="sport_plan_bodymechanics">Aerobics</string>
    <string name="sport_plan_pullup">Pull-up</string>
    <string name="sport_plan_gymnasium">Gymnasium</string>
    <string name="sport_plan_situp">Sit-up</string>
    <string name="sport_plan_pushup">Push-up</string>
    <string name="sport_plan_slap">Plank</string>
    <string name="sport_plan_yoga">Yoga</string>
    <string name="sport_plan_jump">Rope-jump</string>
    <string name="sport_detail_start_time">STime:%s</string>
    <string name="sport_detail_end_time">ETime:%s</string>
    <string name="sleep_title">Sleep</string>
    <string name="sleep_title_detail">Sleep Detail</string>
    <string name="sleep_detail_total">SleepTotalTime:%s </string>
    <string name="sleep_detail_light">LightSleepTime:%s </string>
    <string name="sleep_detail_deep">DeepSleepTime:%s </string>
    <string name="sleep_detail_start">Start</string>
    <string name="sleep_detail_end">End</string>
    <string name="sleep_detail_deep_1">Deep Sleep</string>
    <string name="sleep_detail_light_1">Light Sleep</string>
    <string name="sleep_detail_placement">Placement</string>
    <string name="sync_progress_text">sync data:%s</string>
    <string name="sync_progress_text_over">sync over</string>
    <string name="sync_progress_text_update">Firmware</string>
    <string name="sync_progress_text_select_file">Select firmware upgrade file</string>
    <string name="sync_progress_text_start_upgrade">Start Update</string>
    <string name="sync_progress_text_path">file path:%s</string>
    <string name="dfu_action_abort">stop</string>
    <string name="dfu_confirmation_dialog_title">app upgrade</string>
    <string name="dfu_status_switching_to_dfu">dfu&#8230;</string>
    <string name="dfu_status_connecting">connecting&#8230;</string>
    <string name="dfu_status_starting">Starting DFU&#8230;</string>
    <string name="dfu_status_uploading">Uploading&#8230;</string>
    <string name="dfu_status_uploading_part" formatted="false">progress %d/%d&#8230;</string>
    <string name="dfu_status_validating">Validating&#8230;</string>
    <string name="dfu_status_disconnecting">disconnect&#8230;</string>
    <string name="dfu_status_completed">completed</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_starting_msg">Initial progress bar&#8230;</string>
    <string name="dfu_status_uploading_components_msg">Transmission %s&#8230;</string>
    <string name="dfu_status_validating_msg">Confirmation in&#8230;</string>
    <string name="dfu_status_connecting_msg">connect %s&#8230;</string>
    <string name="dfu_status_uploading_msg">Transmitting application to %s&#8230;</string>
    <string name="dfu_status_completed_msg">Application has been send successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">disconnect %s&#8230;</string>
    <string name="dfu_status_error_msg">DFU fail</string>
    <string name="dfu_version_check">checking version &#8230;</string>
    <string name="dfu_confirmation_dialog_exit_message">Are you sure to exit?</string>
    <string name="dfu_upload_dialog_cancel_message">Are you sure to cancel upload?</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader&#8230;</string>
    <string name="dfu_version_file_create_success"></string>
    <string name="wait_data_update"></string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_status_initializing">Initializing&#8230;</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_command_write_fail">DFU command write failure</string>
    <string name="update_step_connect_device">connecting...</string>
    <string name="activity_update_over">upgrade over</string>
    <string name="update_step_write_device">Writing...</string>
    <string name="update_step_write_device_1">Firmware upgrade</string>
    <string name="update_step_write_retry">retry</string>
    <string name="ble_log_write">Write Log</string>
    <string name="ble_log_notify">Notify Log</string>
    <string name="challenges">Challenges</string>
    <string name="tips">Device</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_community">Social</string>
    <string name="bottom_more">More</string>
</resources>