<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:clipToPadding="false"
            android:elevation="5dp" />
    </android.support.design.widget.AppBarLayout>-->


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/main_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_above="@+id/main_line">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.viewpager.widget.ViewPager>
            </LinearLayout>

            <ImageView
                android:id="@+id/main_line"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_above="@+id/leftcontainer"
                android:background="@android:color/white"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/leftcontainer"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/llStats"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llStatsln"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:orientation="horizontal"
                        android:visibility="gone"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_tab1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_coach_drawable" />

                        <TextView
                            android:id="@+id/tab_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/icon_tab1"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/bottom_home"
                            android:textColor="@color/setting_subheading"
                            android:textSize="@dimen/Roboto_10sp"
                            android:visibility="visible" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/tabLayout2ln"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:orientation="horizontal"
                        android:visibility="gone"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_tab2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_food_drawable" />

                        <TextView
                            android:id="@+id/tab_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/icon_tab2"
                            android:layout_marginTop="5dp"
                            android:text="@string/bottom_community"
                            android:textColor="@color/setting_subheading"
                            android:textSize="@dimen/Roboto_10sp"
                            android:visibility="visible" />
                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/tabLayout3ln"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:orientation="horizontal"
                        android:visibility="gone"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_tab3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_news_drawable" />

                        <TextView
                            android:id="@+id/tab_text3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/icon_tab3"
                            android:layout_marginTop="5dp"
                            android:text="@string/bottom_more"
                            android:textColor="@color/setting_subheading"
                            android:textSize="@dimen/Roboto_10sp"
                            android:visibility="visible" />
                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/tabLayout6ln"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:orientation="horizontal"
                        android:visibility="gone"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_tab6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_social" />

                        <TextView
                            android:id="@+id/tab_text6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/icon_tab3"
                            android:layout_marginTop="5dp"
                            android:text="@string/challenges"
                            android:textColor="@color/setting_subheading"
                            android:textSize="@dimen/Roboto_10sp"
                            android:visibility="visible" />
                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/tabLayout4ln"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:orientation="horizontal"
                        android:visibility="gone"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_tab4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_me_drawable" />

                        <TextView
                            android:id="@+id/tab_text4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/icon_tab4"
                            android:layout_marginTop="5dp"
                            android:text="@string/tips"
                            android:textColor="@color/setting_subheading"
                            android:textSize="@dimen/Roboto_10sp"
                            android:visibility="visible" />

                    </LinearLayout>

                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>